--- a/index.html
+++ b/index.html
@@ -8,6 +8,50 @@
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-  
+  <header>
+    <div class="leftside">
+      <a href=""><img src="assets/images/logoAW.png" alt="Devsla" class="logo" /></a>
+    </div>
+    <div class="middle">
+      <ul>
+        <li><a href="">Model S</a></li>
+        <li><a href="">Model 3</a></li>
+        <li><a href="">Model X</a></li>
+        <li><a href="">Model Y</a></li>
+        <li><a href="">Solar Roof</a></li>
+        <li><a href="">Solar Panels</a></li>
+      </ul>
+    </div>
+    <div class="rightside">
+      <ul>
+        <li><a href="">Shop</a></li>
+        <li><a href="">Tesla Acoount</a></li>
+        <li class="menu">
+          <div class="menu--icon">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </header>
+
+  <main>
+    <div class="info">
+      <h1>Model S</h1>
+      <h2>Order Online for <a href="">Touchless Delivery</a></h2>
+    </div>
+  </main>
+
+  <footer>
+    <div class="buttons--area">
+      <a href="" class="btn--dark">Custom Order</a>
+      <a href="" class="btn--light">Existing Inventory</a>
+    </div>
+    <div class="arrow--area">
+      <img class="arrow" src="assets/images/down.png" alt="" />
+    </div>
+  </footer>
 </body>
 </html>
