--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     </div>
     <div class="middle">
       <ul>
-        <li><a href="">Model S</a></li>
-        <li><a href="">Model 3</a></li>
-        <li><a href="">Model X</a></li>
-        <li><a href="">Model Y</a></li>
-        <li><a href="">Solar Roof</a></li>
-        <li><a href="">Solar Panels</a></li>
+        <li><a href="">Injeção</a></li>
+        <li><a href="">Suspensão</a></li>
+        <li><a href="">Freios</a></li>
+        <li><a href="">Óleos</a></li>
+        <li><a href="">Filtros</a></li>
+        <li><a href="">Correias</a></li>
       </ul>
     </div>
     <div class="rightside">
       <ul>
-        <li><a href="">Shop</a></li>
-        <li><a href="">Tesla Acoount</a></li>
+        <li><a href="">(65) 3682-5291</a></li>
+        <li><a href="">Localização</a></li>
         <li class="menu">
           <div class="menu--icon">
             <div></div>
